--- a/www/.htaccess
+++ b/www/.htaccess
@@ -18,6 +18,8 @@ RewriteRule ^scripts/   -               [L]
 
 RewriteRule ^search$ index.php?p=search [QSA,L]
 
+RewriteRule ^report$ index.php?p=report [QSA,L]
+
 RewriteRule ^data$ index.php?p=source-list [QSA,L]
 
 RewriteRule ^data/([^/]+)$ index.php?p=source&source=$1 [QSA,L]
