Move dataset upload history to its own page - closes #19
Add recent uploads to home page

Style source page better

Mess around with charts

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -28,6 +28,8 @@ RewriteRule ^data/([^/]+)/([^/]+)\.csv$ index.php?p=dataset&source=$1&dataset=$2
 
 RewriteRule ^data/([^/]+)/([^/]+)$ index.php?p=dataset&source=$1&dataset=$2 [QSA,L]
 
+RewriteRule ^data/([^/]+)/([^/]+)/_history$ index.php?p=dataset-history&source=$1&dataset=$2 [QSA,L]
+
 RewriteRule ^data/([^/]+)/([^/]+)/([^/]+)\.csv$ index.php?p=import&source=$1&dataset=$2&import=$3&format=csv [QSA,L]
 
 RewriteRule ^data/([^/]+)/([^/]+)/([^/]+)$ index.php?p=import&source=$1&dataset=$2&import=$3 [QSA,L]
