--- a/www/.htaccess
+++ b/www/.htaccess
@@ -16,7 +16,7 @@ RewriteRule ^search$ index.php?p=search [QSA,L]
 
 # Reports and downloads
 
-RewriteRule ^report(?:\.(csv|json|xml))?$ index.php?p=report&format=$1 [QSA,L]
+RewriteRule ^report(?:\.(csv|json|xml|n3))?$ index.php?p=report&format=$1 [QSA,L]
 
 # Sources
 
