--- a/www/.htaccess
+++ b/www/.htaccess
@@ -36,6 +36,8 @@ RewriteRule ^data/([\w-]{1,32})/history$ index.php?p=dataset-history&dataset=$1 
 
 RewriteRule ^data/([\w-]{1,32})/stats(?:\.(csv|json))?$ index.php?p=stats&dataset=$1&format=$2 [QSA,L]
 
+RewriteRule ^data/([\w-]{1,32})/stats/filter/([\w]{1,32})$ index.php?p=filter&dataset=$1&filter_tag=$2 [QSA,L]
+
 # Imports
 
 RewriteRule ^data/([\w-]{1,32})/([\d:.+-]+)$ index.php?p=dataset&dataset=$1&import=$2 [QSA,L]
