--- a/www/.htaccess
+++ b/www/.htaccess
@@ -38,7 +38,7 @@ RewriteRule ^data/([\w-]{1,32})/stats(?:\.(csv|json))?$ index.php?p=stats&datase
 
 RewriteRule ^data/([\w-]{1,32})/map(?:\.(csv|json))?$ index.php?p=map&dataset=$1&format=$2 [QSA,L]
 
-RewriteRule ^data/([\w-]{1,32})/(stats|data)/filter/([\w]{1,32})$ index.php?p=filter&dataset=$1&type=$2&filter_tag=$3 [QSA,L]
+RewriteRule ^data/([\w-]{1,32})/(stats|data|map)/filter/([\w]{1,32})$ index.php?p=filter&dataset=$1&type=$2&filter_tag=$3 [QSA,L]
 
 # Imports
 
